# OLTS-Cam

./: .env  .gitignore  Cargo.toml  LICENSE.PySide6  README.md  launch.bat  launch.sh  lcov.info  license.txt  log.txt  requirements.txt  requirements_torch_cpu.txt  settings.json
.github/workflows/: main.yml  rust.yml
api-specifications/: python-server.yaml
bot/: index.html
data_db/: database.db
database/: Container.html  DatabaseManager.html  Objects.html  index.html  main.html
database/tables/: ContainerItem.html  ObjectItem.html  index.html
desktop/: index.html
desktop/core/: app.html  camera_screen.html  home_screen.html  index.html  model_screen.html  video_screen.html
desktop/ui/: index.html  ui_main.html
model/: index.html  model_manager.html  model_runner.html
server/: image_util.html  index.html  models.html  server.html
settings/: settings_camera.json  settings_db.json  settings_fs.json
src/: MainApp.py  NavigationBar.py  ScreenBase.py  api_client.rs  bot.rs  db_manager_logs.txt  errors.rs  index.html  listenner.rs  main.html  main.py  main.rs  models.py  models.rs  requests.rs  server.py  test.py
src/app/: main.py
src/bot/: api_client.rs  bot.rs  errors.rs  main.rs
src/database/: Container.html  Container.py  DatabaseManager.html  DatabaseManager.py  Objects.html  Objects.py  Record.py  index.html  main.html  main.py
src/desktop/: index.html  main.py
src/model/: index.html  model.py  model_manager.html  model_manager.py  model_runner.html  model_runner.py
src/screens/: Screen1.py  Screen2.py  Screen3.py  Screen4.py  Screen5.py  __init__.py
src/server/: image_util.html  image_util.py  index.html  models.html  models.py  server.html  server.py
src/ui/: __init__.py  ui_main.py
src/utils/: camera_settings_validator.html  camera_settings_validator.py  index.html  logger.html  logger.py  (+2 more)
utils/: camera_settings_validator.html  index.html  logger.html  model_settings_validator.html
(+35 files in other folders)
