[package]
name = "camera_detection_bot"
version = "0.2.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros", "throttle"] }
log = "0.4.27"
pretty_env_logger = "0.5"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
warp = "0.3.7"
base64 = "0.22.1"
serde = "1.0.219"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
lazy_static = "1.5.0"
serde_json = "1.0.140"
thiserror = "2.0.12"
