[package]
name = "camera_detection_bot"
version = "0.3.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros", "throttle"] }
log = "0.4.27"
pretty_env_logger = "0.5"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
base64 = "0.22.1"
serde = "1.0.219"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
anyhow = "1.0.98"
url = "2.5.4"

[dev-dependencies]
httpmock = { version = "0.7.0", features = ["remote"] }
serial_test = "3.2.0"
teloxide_tests = "0.2.0"
